# buili

./: .env.example  .gitignore  README.md  environment.yml  mockup.html  package-lock.json  package.json  pyproject.toml  render.yaml
docs/: plan2field_micro_vlm_pipeline.md  product_spec_implementation_matrix.md
ml/: analyze_plan2field_data_quality.py  audit_cubicasa_vlm_patch_dataset.py  audit_plan2field_label_quality.py  benchmark_plan2field3d_full.py  benchmark_plan2field_vlm_primary.py  build_buili_vlm_dataset.py  build_combined_vlm_dataset.py  build_combined_vlm_open_dataset.py  build_cubicasa_vlm_primary_dataset.py  build_plan2field_micro_vlm_dataset.py  build_plan2field_proposal_verifier_dataset.py  build_plan2field_vlm_primary_dataset.py  build_plan2field_yolo_tiles.py  build_plan2field_yolo_tiles_filtered.py  build_plan2field_yolo_tiles_with_background.py  build_plan2field_yolo_trainval.py  collect_open_construction_corpus.py  collect_plan2field_eval50.py  diagnose_plan2field_eval_failures.py  download_public_data.py  evaluate_internvl35_adapter.py  evaluate_plan2field3d_eval50.py  evaluate_plan2field_detector_ensemble.py  evaluate_plan2field_proposal_verifier.py  evaluate_plan2field_tabular_verifier.py  export_plan2field_yolo_dataset.py  train_doc_layout_smoke.py  train_full_ai_stack.py  train_internvl35_lora.py  train_plan2field_micro_vlm.py  train_plan2field_proposal_verifier.py  train_plan2field_vlm_primary.py  train_qwen3_vl_lora.py  tune_tileplandet_calibrated_postprocess.py
scripts/: smoke_authenticated_deployment.py
tests/: conftest.py  (+7 more)
(+103 files in other folders)
