[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "buili"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "fastapi>=0.115",
  "numpy>=1.26",
  "opencv-python-headless>=4.10",
  "pillow>=10.0",
  "psycopg[binary]>=3.2",
  "pydantic-settings>=2.6",
  "pymupdf>=1.24",
  "python-multipart>=0.0.12",
  "redis>=5.0",
  "reportlab>=4.2",
  "shapely>=2.0",
  "sqlalchemy>=2.0",
  "trimesh>=4.5",
  "uvicorn[standard]>=0.30"
]

[tool.setuptools.packages.find]
include = ["services*", "workers*", "ml*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
